2010-11-04  Robert Larice
 * src/main.c ,
 * src/ngsconvert.c ,
 * src/frontend/aspice.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c :
    use `size_t' variables for fread/fwrite operations

2010-11-02  Robert Larice
 * src/frontend/numparam/general.h ,
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/numparam.h ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c :
    use the type `bool' instead of `unsigned char' in the numparam world
      bool currently is `unsigned char', plan to change to `int' for better
      type comaptibility with `C' boolean expressions

2010-11-02  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/parser/lexical.c ,
 * src/frontend/quote.c ,
 * src/frontend/subckt.c ,
 * src/main.c ,
 * src/spicelib/parser/inpcfix.c ,
 * src/xspice/cmpp/pp_lst.c ,
 * src/xspice/cmpp/util.c ,
 * src/xspice/icm/digital/d_source/cfunc.mod ,
 * src/xspice/icm/digital/d_state/cfunc.mod ,
 * src/xspice/ipc/ipctiein.c :
    casts, to make int <-> char conversions explicit

2010-11-02  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/numparam/mystring.c :
    add some more `int' versus `size_t' casts

2010-11-02  Robert Larice
 * src/frontend/outitf.c ,
 * src/spicelib/parser/inp2r.c :
    minor beautification

2010-11-02  Robert Larice
 * src/ciderlib/input/cards.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/dotcards.c ,
 * src/frontend/plotting/grid.c ,
 * src/ngspice.c ,
 * src/spicelib/analysis/acsetp.c ,
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/analysis/cktsopt.c ,
 * src/spicelib/analysis/dctsetp.c ,
 * src/spicelib/analysis/dsetparm.c ,
 * src/spicelib/analysis/nsetparm.c ,
 * src/spicelib/analysis/pzsetp.c ,
 * src/spicelib/analysis/senssetp.c ,
 * src/spicelib/analysis/tfsetp.c ,
 * src/spicelib/analysis/transetp.c ,
 * src/spicelib/devices/dev.c ,
 * src/spicelib/parser/inpptree.c ,
 * src/unsupported/sen2setp.c :
    use `NUMELEMS' and add some `(int)' casts
