@@ -466,11 +466,13 @@ com_compose(wordlist *wl)
     ZERO(result, struct dvec);
     result->v_name = copy(resname);
     result->v_type = type;
-    result->v_flags = (realflag ? VF_REAL : VF_COMPLEX) | VF_PERMANENT;
-    if (realflag)
+    if (realflag) {
+        result->v_flags = VF_REAL | VF_PERMANENT;
         result->v_realdata = data;
-    else
+    } else {
+        result->v_flags =  VF_COMPLEX | VF_PERMANENT;
         result->v_compdata = cdata;
+    }
     result->v_length = length;
     result->v_numdims = 1;
     result->v_dims[0] = length;
